[UTF-8][Japanese]

*Ver3.00 : 2015/12/xx

-.gitignoreの書式を変更
-標準フォントに「メイリオ」を指定
-アルバムのサムネイルにカスタムサイズを許可。（[http://ac206223.ppp.asahi-net.or.jp/adiary/diary/hirosugu/018:Thanks to 平山]）
-iframeやimg等で外部サービスを埋め込む際、可能な限りhttpsで埋め込むように変更。（[http://adiary.blog.abk.nu/0381#c4:Thanks to リップル]）
-【fix】同時編集ロック機能がオフにできない。
-【fix】{[*section_number]}等が無効になっていた。（[http://ac206223.ppp.asahi-net.or.jp/adiary/diary/hirosugu/018:Thanks to 平山]）
-【fix】サムネイル再生成時のダイアログが正しくなかった。

*Ver3.0 RC2.1: 2015/11/29

-【fix】コンテンツタイトルに「"'<>」などの文字を使用すると、親ノード指定時などに文字化けする。
-【fix】スマホメニュー設定の不具合修正

*Ver3.0 RC2: 2015/11/28

-デザイン編集を強化しました。
--記事ヘッダを編集できるようにしました。
--単一記事表示と複数記事表示のそれぞれで、記事ヘッダとフッタを編集できるようにしました。
--複数記事表示時に、記事と記事の間に出力するモジュールを編集できるようにしました。
-[http://adiary.org/v3man/Satsuki-tag/tex:#mathjax:MathJaxに対応しました]。
-trust_mode時に使える「JavaScript入力プラグイン」を作成しました。
-記事一覧から、複数の記事のタグを一括編集できるようになりました。
-textarea を 'display: block' に変更しました。
-Twitterへの通知送信を更新通知Pingの設定と連動するようにしました。
-{[asin:XXXX:image]}記法使用時、スライドショー（Lightbox2）の対象にならないようにしました。
-付加情報リビルド時にタグ情報テーブルも再生成するようにしました。
-ツリー編集画面で項目編集中にツリー内の別の場所をクリックしたら編集を終了するようにしました。
-記事一覧を nofollow から外しロボットに検索させるようにしました。((検索エンジンにサイト内のすべての記事を見つけてもらいやすくするための措置です。サイトマップの代わり。))
-デザイン編集で必須要素が消えないように対策しました。((本来は起こりえないのですが、不具合発生時のセーフティとして対策しました。))
-ボタンのデザインがブラウザによりまちまちなので、最低限CSSで指定するようにしました。
-Twitterソーシャルボタンで共有済の検索から「http://」を除くようにしました。
-編集画面の記事番号の表示位置を変更しました。
-編集画面の記法ヘルパーや画像貼付がHTML入力選択時も動作するようにしました。
-記事編集画面の下書き保存ボタンの位置を変更しました。((自分でよく間違えて公開保存してしまっていたので、多分こっちの変更後のほうが使いやすいはず。))
-HTML直接入力のパーサーを改良し、使いやすくしました。
-CGI動作時の記事編集保存の速度を少し速くしましした。
-index.html を更新しました。
-Twitterの仕様変更に合わせツイート数の表示機能をオフにしました。（[http://did2memo.net/2015/09/28/twitter-count-json-shut-down/:参考]）
-【さつき記法】[http://adiary.org/v3man/Satsuki/list:#dl:定義済みリスト記法]で項目名と項目（dt/dd）を「n:m」で記述できるようにしました。（Thanks to Kaede）
-【さつき記法】ブロック記法とリスト記法を互いに入れ子した時の挙動を改善しました。
-【さつき記法】table出力時の「{<tr class="odd"/"even">}」クラス出力をやめました。((CSSで実現できるので不要になりました。))
-【さつき記法】拡張リスト記法の項目の最後に空行を記述できる仕様を廃止しました。
-【Markdown】{\>}のエスケープ処理が正しくなかったので修正。